force-app/main/default/objects/Fund_Allocation__c/Fund_Allocation__c.object-meta.xml
<CustomObject>
    <label>Fund Allocation</label>
    <nameField>
        <displayFormat>FAL-{00000}</displayFormat>
        <label>Fund Allocation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fund Allocation</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>