force-app/main/default/objects/Fund_Allocation__c/fields/Allocation_Date__c.field-meta.xml
<CustomField>
    <fullName>Allocation_Date__c</fullName>
    <label>Allocation Date</label>
    <type>Date</type>
</CustomField>