force-app/main/default/objects/Fund_Allocation__c/fields/Allocation_From_Type__c.field-meta.xml
<CustomField>
    <fullName>Allocation_From_Type__c</fullName>
    <label>Allocation From Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Project</fullName>
            </value>
            <value>
                <fullName>Fund</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>