force-app/main/default/objects/Fund_Allocation__c/fields/Donor__c.field-meta.xml
<CustomField>
    <fullName>Donor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Donor</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Funds_Allocation</relationshipName>
    <type>Lookup</type>
</CustomField>