force-app/main/default/objects/Fund_Allocation__c/fields/Donor_Signatory__c.field-meta.xml
<CustomField>
    <fullName>Donor_Signatory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Donor Signatory</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Funds_Allocation</relationshipName>
    <type>Lookup</type>
</CustomField>