force-app/main/default/objects/Fund_Allocation__c/fields/Eversign_Partner_Document_Id__c.field-meta.xml
<CustomField>
    <fullName>Eversign_Partner_Document_Id__c</fullName>
    <label>Eversign Partner Document Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>