force-app/main/default/objects/Fund_Allocation__c/fields/From_Allocation__c.field-meta.xml
<CustomField>
    <fullName>From_Allocation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>From Allocation</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>npsp__General_Accounting_Unit__c.Product_Type__c</field>
            <operation>equals</operation>
            <valueField>$Source.Allocation_From_Type__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>npsp__General_Accounting_Unit__c</referenceTo>
    <relationshipName>Funds_Allocation</relationshipName>
    <type>Lookup</type>
</CustomField>