force-app/main/default/objects/Fund_Allocation__c/fields/Partner_Agreement_Signature_Status__c.field-meta.xml
<CustomField>
    <fullName>Partner_Agreement_Signature_Status__c</fullName>
    <label>Partner Agreement Signature Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Eversign_Document_Status</valueSetName>
    </valueSet>
</CustomField>