force-app/main/default/objects/Fund_Allocation__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipName>Funds_Allocation</relationshipName>
    <type>Lookup</type>
</CustomField>