force-app/main/default/objects/Fund_Allocation__c/fields/Replenishable__c.field-meta.xml
<CustomField>
    <fullName>Replenishable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Replenishable</label>
    <type>Checkbox</type>
</CustomField>